// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingSummary render with shipment state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BookingSummary
    cities={
      Object {
        "destination": "FOO_DESTINATION_CITY",
        "origin": "FOO_ORIGIN_CITY",
      }
    }
    hubs={
      Object {
        "destination": "FOO_DESTINATION_HUB",
        "origin": "FOO_ORIGIN_HUB",
      }
    }
    loadType=""
    modeOfTransport="FOO_MODE_OF_TRANSPORT"
    nexuses={
      Object {
        "destination": "FOO_NEXUSES_DESTINATION",
        "origin": "FOO_NEXUSES_ORIGIN",
      }
    }
    scope={
      Object {
        "address_fields": true,
        "cargo_info_level": "hs_codes",
        "carriage_options": Object {
          "on_carriage": Object {
            "export": "optional",
            "import": "optional",
          },
          "pre_carriage": Object {
            "export": "optional",
            "import": "optional",
          },
        },
        "closed_quotation_tool": false,
        "closed_registration": false,
        "closed_shop": false,
        "consolidate_cargo": false,
        "continuous_rounding": false,
        "customs_export_paper": false,
        "dangerous_goods": false,
        "detailed_billing": false,
        "fee_detail": "key_and_name",
        "fixed_currency": false,
        "fixed_exchange_rates": false,
        "has_customs": true,
        "has_insurance": true,
        "incoterm_info_level": "text",
        "links": Object {
          "about": "",
          "imprint": "",
        },
        "modes_of_transport": Object {
          "air": Object {
            "cargo_item": true,
            "container": true,
          },
          "ocean": Object {
            "cargo_item": true,
            "container": true,
          },
          "rail": Object {
            "cargo_item": true,
            "container": true,
          },
          "truck": Object {
            "cargo_item": false,
            "container": false,
          },
        },
        "non_stackable_goods": true,
        "open_quotation_tool": false,
        "require_full_address": true,
        "show_beta_features": true,
        "terms": Array [
          "You verify that all the information provided above is true",
          "You agree to the presented terms and conditions.",
          "Demo is to discuss the validity of the presented prices with the product owners.",
        ],
        "total_dimensions": true,
        "user_restrictions": Object {
          "profile": Object {
            "company": false,
            "email": false,
            "name": false,
            "password": false,
            "phone": false,
          },
        },
        "values": Object {
          "weight": Object {
            "decimals": 2,
            "unit": "kg",
          },
        },
      }
    }
    t={[Function]}
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    totalVolume={200}
    totalWeight={100}
    trucking={
      Object {
        "onCarriage": Object {
          "truckType": "FOO_ON_CARRIAGE",
        },
        "preCarriage": Object {
          "truckType": "FOO_PRE_CARRIAGE",
        },
      }
    }
  >
    <div
      className="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
    >
      <div
        className="route_sec flex-70 layout-column layout-align-stretch"
      >
        <div
          className="flex-none layout-row layout-align-center"
        >
          <div
            className="connection_graphics"
          >
            <i
              className="fa fa-map-marker"
            />
            <div
              style={
                Object {
                  "background": "linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa)",
                  "backgroundSize": "16px 2px, 100% 2px",
                  "height": "2px",
                  "marginTop": "6px",
                  "width": "100%",
                }
              }
            />
            <i
              className="fa fa-flag-o"
            />
          </div>
        </div>
        <div
          className="flex-50 layout-row layout-align-space-between"
        >
          <div
            className="flex-50 layout-row layout-align-center-center"
          >
            <h4>
              From
            </h4>
          </div>
          <div
            className="flex-50 layout-row layout-align-center-center"
          >
            <h4>
              To
            </h4>
          </div>
        </div>
        <div
          className="flex-50 layout-row layout-align-space-between"
        >
          <div
            className="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
          >
            <h4
              className="flex-100"
            >
              <TruncateText
                lines={1}
              >
                <Truncate
                  data-tip="FOO_ORIGIN_CITY"
                  ellipsis="…"
                  lines={1}
                  onTruncate={[Function]}
                  trimWhitespace={false}
                >
                  <span
                    data-tip="FOO_ORIGIN_CITY"
                  >
                    <span />
                    <span>
                      FOO_ORIGIN_CITY
                    </span>
                    <span
                      style={
                        Object {
                          "left": 0,
                          "position": "fixed",
                          "top": 0,
                          "visibility": "hidden",
                        }
                      }
                    >
                      …
                    </span>
                  </span>
                </Truncate>
              </TruncateText>
            </h4>
            <p
              className="trucking_elem flex-none"
            >
              with pick-up
            </p>
          </div>
          <div
            className="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
          >
            <h4
              className="flex-100"
            >
              <TruncateText
                lines={1}
              >
                <Truncate
                  data-tip="FOO_DESTINATION_CITY"
                  ellipsis="…"
                  lines={1}
                  onTruncate={[Function]}
                  trimWhitespace={false}
                >
                  <span
                    data-tip="FOO_DESTINATION_CITY"
                  >
                    <span />
                    <span>
                      FOO_DESTINATION_CITY
                    </span>
                    <span
                      style={
                        Object {
                          "left": 0,
                          "position": "fixed",
                          "top": 0,
                          "visibility": "hidden",
                        }
                      }
                    >
                      …
                    </span>
                  </span>
                </Truncate>
              </TruncateText>
            </h4>
            <p
              className="trucking_elem flex-none"
            >
              with
                delivery
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
      >
        <h4
          className="flex-50 layout-row layout-align-center-center"
        >
          Total Weight
        </h4>
        <p
          className="flex-50 layout-row layout-align-center-start"
        >
          100.00
           
          kg
        </p>
      </div>
    </div>
  </BookingSummary>
</Provider>
`;

exports[`loadType is cargo_item 1`] = `
<div
  class="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
>
  <div
    class="route_sec flex-70 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="connection_graphics"
      >
        <i
          class="fa fa-map-marker"
        />
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
        <i
          class="fa fa-flag-o"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
  <div
    class="flex hide-sm hide-xs layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Volume
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      200.000 m³
    </p>
  </div>
</div>
`;

exports[`modeOfTransport is falsy 1`] = `
<div
  class="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
>
  <div
    class="route_sec flex-70 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="connection_graphics"
      >
        <i
          class="fa fa-map-marker"
        />
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
        <i
          class="fa fa-flag-o"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`render render 1`] = `
<div
  class="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
>
  <div
    class="route_sec flex-70 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="connection_graphics"
      >
        <i
          class="fa fa-map-marker"
        />
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
        <i
          class="fa fa-flag-o"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  class="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
>
  <div
    class="route_sec flex-70 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="connection_graphics"
      >
        <i
          class="fa fa-map-marker"
        />
        <div
          style="margin-top:6px;height:2px;width:100%;background:black;background-size:16px 2px, 100% 2px"
        />
        <i
          class="fa fa-flag-o"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`trucking.onCarriage is empty object 1`] = `
<div
  class="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
>
  <div
    class="route_sec flex-70 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="connection_graphics"
      >
        <i
          class="fa fa-map-marker"
        />
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
        <i
          class="fa fa-flag-o"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          without
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`trucking.preCarriage is empty object 1`] = `
<div
  class="booking_summary flex-70 flex-gt-lg-30 flex-gt-md-50 flex-gt-sm-70 layout-align-center-center layout-align-sm-end-center layout-row"
>
  <div
    class="route_sec flex-70 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="connection_graphics"
      >
        <i
          class="fa fa-map-marker"
        />
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
        <i
          class="fa fa-flag-o"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          without pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex hide-sm hide-xs flex-sm-30 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;
